--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-simple-star-rating": "^4.0.5",
+    "react-star-ratings": "^2.3.0",
+    "react-stars": "^2.2.5",
     "sass": "^1.51.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
