--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
+    "react-bootstrap-icons": "^1.8.2",
     "react-dom": "^18.1.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.3.0",
