--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-bootstrap-icons": "^1.8.2",
+    "react-countup": "^6.2.0",
     "react-dom": "^18.1.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.3.0",
