--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/react-dom": "^18.0.3",
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-bootstrap": "^2.3.1",
     "react-bootstrap-icons": "^1.8.2",
     "react-countup": "^6.2.0",
     "react-dom": "^18.1.0",
+    "react-move": "^6.5.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
